--- a/public/style_index.css
+++ b/public/style_index.css
@@ -1,3 +1,11 @@
+/*
+Color scheme
+https://kuler.adobe.com/Johnny-Cash-Tribute-color-theme-718425/
+
+peach color:; #f2ca80
+
+*/
+
 body{
 	background-image: url("grey_wash_wall.png");
 }
@@ -5,7 +13,9 @@ body{
 
 h1{
 	padding: 25px;
-	color: white;
+	color: #f2ca80;
+	text-align: center;
+	font-size: 500%;
 }
 
 .budget{
@@ -67,10 +77,16 @@ label{
 
 .links li{
 	list-style-type: none;
+	margin: 30px 0;
 }
-.transportation h3,
-.transportation a{
+.transportation h3{
+	padding: 12px;
+	margin-left: 15px;
+	margin-right: 15px;
 	letter-spacing: normal;
+	text-align: center;
+	background-color: black;
+	color: white;
 }
 
 /*Here are the background images for airline logos*/
