--- a/views/transportation.erb
+++ b/views/transportation.erb
@@ -51,29 +51,29 @@
 		</div>
 
 		<div class="transportation" id="train">
-				<h3> Trains & Railroads </h3>
+			<h3>Trains & Railroads</h3>
 			<ul>
-      			<li><a href="http://www.amtrak.com">Amtrak</a></li>
-      			<li><a href="#">RailEurope</a></li>
-      			<li><a href="http://www.cn.ca/">Canada</a></li>
+      			<div class="links"><li><a href="http://www.amtrak.com">Amtrak</a></li></div>
+      			<div class="links"><li><a href="#">RailEurope</a></li></div>
+      			<div class="links"><li><a href="http://www.cn.ca/">Canada</a></li></div>
    			</ul>
 		</div>
 
 		<div class="transportation" id="cruise">
-				<h3> Cruises </h3>
+			<h3>Cruises</h3>
 			<ul>
-      			<li><a href="http://www.carnival.com">Carnival</a></li>
-      			<li><a href="http://disneycruise.disney.go.com/">DisneyCruise</a></li>
-      			<li><a href="http://www.americancruiselines.com/">American Cruise Lines</a></li>
+      			<div class="links"><li><a href="http://www.carnival.com">Carnival</a></li></div>
+      			<div class="links"><li><a href="http://disneycruise.disney.go.com/">DisneyCruise</a></li></div>
+      			<div class="links"><li><a href="http://www.americancruiselines.com/">American Cruise Lines</a></li></div>
    			</ul>
 		</div>
 
 		<div class="transportation" id="bus">
-				<h3> Buses </h3>
+				<h3>Buses</h3>
 			<ul>
-      			<li><a href="http://www.coachusa.com/">Coach USA</a></li>
-      			<li><a href="https://www.greyhound.com/">GreyHound</a></li>
-      			<li><a href="https://us.megabus.com/">Megabus</a></li>
+      			<div class="links"><li><a href="http://www.coachusa.com/">Coach USA</a></li></div>
+      			<div class="links"><li><a href="https://www.greyhound.com/">GreyHound</a></li></div>
+      			<div class="links"><li><a href="https://us.megabus.com/">Megabus</a></li></div>
    			</ul>
 
 		</div>
