further styling of transportation

--- a/views/transportation.erb
+++ b/views/transportation.erb
@@ -24,8 +24,9 @@
             	<li><a href="print">Print-out Page</a></li>
         	</ul>
     	</div>
-	</div>
-		<h1>We are here to help you go from your origin to your destination</h1>
+	</div><br><br><br>
+
+		<div class="head"><h1>We are here to help you go from your origin to your destination</h1></div><br>
 
 		<div class="transportation pure-g" id="flights">
 			<div class="pure-u-lg-2-3 pure-u-md-1-2 pure-u-sm-1-1">
