Finished transportation styling

--- a/views/transportation.erb
+++ b/views/transportation.erb
@@ -26,7 +26,7 @@
     	</div>
 	</div><br><br><br>
 
-		<div class="head"><h1>We are here to help you go from your origin to your destination</h1></div><br>
+		<div class="head"><h1>Plan your trip from origin to destination</h1></div><br>
 
 		<div class="transportation pure-g" id="flights">
 			<div class="pure-u-lg-2-3 pure-u-md-1-2 pure-u-sm-1-1">
@@ -51,32 +51,31 @@
 			</div>
 		</div>
 
-		<div class="transportation" id="train">
-			<h3>Trains & Railroads</h3>
-			<ul>
-      			<div class="links"><li><a href="http://www.amtrak.com">Amtrak</a></li></div>
-      			<div class="links"><li><a href="#">RailEurope</a></li></div>
-      			<div class="links"><li><a href="http://www.cn.ca/">Canada</a></li></div>
-   			</ul>
-		</div>
+		<div class="pure-g">
+			<div class="transportation pure-u-lg-1-3" id="train">
+				<h3>Trains & Railroads</h3>
+				<ul>
+	      			<div class="links" id="amtrak"><li><a href="http://www.amtrak.com">Amtrak</a></li></div>
+	      			<div class="links" id="raileurope"><li><a href="#">RailEurope</a></li></div>
+	      			<div class="links" id="canadian"><li><a href="http://www.cn.ca/">Canadian</a></li></div>
+	   			</ul>
+			</div><div class="transportation pure-u-lg-1-3" id="cruise">
+				<h3>Cruises</h3>
+				<ul>
+	      			<div class="links" id="carnival"><li><a href="http://www.carnival.com">Carnival</a></li></div>
+	      			<div class="links" id="disney"><li><a href="http://disneycruise.disney.go.com/">DisneyCruise</a></li></div>
+	      			<div class="links" id="acl"><li><a href="http://www.americancruiselines.com/">American Cruise Lines</a></li></div>
+	   			</ul>
+			</div>
 
-		<div class="transportation" id="cruise">
-			<h3>Cruises</h3>
-			<ul>
-      			<div class="links"><li><a href="http://www.carnival.com">Carnival</a></li></div>
-      			<div class="links"><li><a href="http://disneycruise.disney.go.com/">DisneyCruise</a></li></div>
-      			<div class="links"><li><a href="http://www.americancruiselines.com/">American Cruise Lines</a></li></div>
-   			</ul>
-		</div>
-
-		<div class="transportation" id="bus">
-				<h3>Buses</h3>
-			<ul>
-      			<div class="links"><li><a href="http://www.coachusa.com/">Coach USA</a></li></div>
-      			<div class="links"><li><a href="https://www.greyhound.com/">GreyHound</a></li></div>
-      			<div class="links"><li><a href="https://us.megabus.com/">Megabus</a></li></div>
-   			</ul>
-
+			<div class="transportation pure-u-lg-1-3" id="bus">
+					<h3>Buses</h3>
+				<ul>
+	      			<div class="links" id="coach"><li><a href="http://www.coachusa.com/">Coach USA</a></li></div>
+	      			<div class="links" id="greyhound"><li><a href="https://www.greyhound.com/">GreyHound</a></li></div>
+	      			<div class="links" id="megabus"><li><a href="https://us.megabus.com/">Megabus</a></li></div>
+	   			</ul>
+	   		</div>
 		</div>
 	</body>
 
