--- a/public/style_index.css
+++ b/public/style_index.css
@@ -3,14 +3,20 @@ Color scheme
 https://kuler.adobe.com/Johnny-Cash-Tribute-color-theme-718425/
 
 peach color:; #f2ca80
-
+red; #b9121b
+dark red: #4C1B1B;
 */
 
 body{
 	background-image: url("grey_wash_wall.png");
 }
-
-
+.head{
+	height: 200px;
+	position: relative;
+	width: 450px;
+	margin-left: auto;
+	margin-right: auto;
+}
 h1{
 	padding-top: 70px;
 	color: #f2ca80;
@@ -65,6 +71,8 @@ label{
 	display: inline-block;
 	width: 138px;
 	height: 70px;
+	border-radius: 5px;
+	border: 1px solid #4C1B1B;
 }
 .links a{
 	text-decoration: none;
@@ -76,16 +84,17 @@ label{
 
 .links li{
 	list-style-type: none;
-	margin: 30px 0;
+	margin: 0 0;
 }
 .transportation h3{
-	padding: 12px;
-	margin-left: 15px;
-	margin-right: 15px;
+	padding: 0 12px;
+	margin-left: 10%;
+	margin-right: 13%;
 	letter-spacing: normal;
 	text-align: center;
-	background-color: black;
+	background-color: #4C1B1B;
 	color: white;
+	border-radius: 10px;
 }
 
 /*Here are the background images for airline logos*/
@@ -131,5 +140,47 @@ label{
 }
 #easy{
 	background-image: url(images/easyjet.png);	
+	background-position: center;
+}
+
+/*Cruise lines*/
+#carnival{
+	background-image: url(images/carnival.jpg);	
+	background-position: center;
+}
+#disney{
+	background-image: url(images/disney.jpg);	
+	background-position: center;
+}
+#acl{
+	background-image: url(images/acl.jpg);	
+	background-position: center;
+}
+
+/*Railways*/
+#amtrak{
+	background-image: url(images/amtrak.jpg);	
+	background-position: center;
+}
+#raileurope{
+	background-image: url(images/raileurope.jpg);	
+	background-position: center;
+}
+#canadian{
+	background-image: url(images/canadian.jpg);	
+	background-position: center;
+}
+
+/*Bus lines*/
+#coach{
+	background-image: url(images/coach.jpg);	
+	background-position: center;
+}
+#greyhound{
+	background-image: url(images/greyhound.png);	
+	background-position: center;
+}
+#megabus{
+	background-image: url(images/megabus.jpg);	
 	background-position: center;
 }
