--- a/views/lodging.erb
+++ b/views/lodging.erb
@@ -24,33 +24,35 @@
             	<li><a href="print">Print-out Page</a></li>
         	</ul>
     	</div>
-	</div>
-      <h1>We are here to help you find a place to stay</h1>
-		<div class="lodging" id="hotel">
+	</div><br><br>
+
+	<div class="head"><h1>We Are Here to Help You Find a Place to Stay</h1></div>
+	<div class="pure-g">
+		<div class="lodging pure-u-lg-1-3 pure-u-md-1-2" id="hotel">
 			<h2>Hotel Choices</h2>
 			<ul>
-				<li><a href="http://www.orbitz.com">Orbitz</a></li>
-				<li><a href="http://www.expedia.com">Expedia</a></li>
-				<li><a href="http://www.hotwire.com">Hotwire</a></li>
-				<li><a href="http://www.hotels.com">Hotels.com</a></li>
-				<li><a href="http://www.tripadvisor.com">Tripadvisor.com</a></li>
+				<div class="linkslodging"><li><a href="http://www.orbitz.com">Orbitz</a></li></div>
+				<div class="linkslodging"><li><a href="http://www.expedia.com">Expedia</a></li></div>
+				<div class="linkslodging"><li><a href="http://www.hotwire.com">Hotwire</a></li></div>
+				<div class="linkslodging"><li><a href="http://www.hotels.com">Hotels.com</a></li></div>
+				<div class="linkslodging"><li><a href="http://www.tripadvisor.com">Tripadvisor.com</a></li></div>
 			</ul>
 		</div>
 
-		<div class="lodging" id="rentals">
+		<div class="lodging pure-u-lg-1-3 pure-u-md-1-2" id="rentals">
 			<h2>Short Term Rentals</h2>	
 			<ul>
-				<li><a href="https://www.airbnb.com/">Airbnb</a></li>
-				<li><a href="http://www.flipkey.com/">Flipkey</a></li>
-				<li><a href="http://www.homeaway.com/">HomeAway</a></li>
+				<div class="linkslodging"><li><a href="https://www.airbnb.com/">Airbnb</a></li></div>
+				<div class="linkslodging"><li><a href="http://www.flipkey.com/">Flipkey</a></li></div>
+				<div class="linkslodging"><li><a href="http://www.homeaway.com/">HomeAway</a></li></div>
 			</ul>
 		</div>
 
-		<div class="lodging" id="local">
+		<div class="lodging pure-u-lg-1-3 pure-u-md-1-1" id="local">
 			<h2>Local or Private listing</h2>
 			<ul>
-				<li><a href="https://www.craigslist.org">Craigslist</a></li>
-				<li><a href="https://www.couchsurfing.org/">Couch Surfing</a></li>
+				<div class="linkslodging"><li><a href="https://www.craigslist.org">Craigslist</a></li></div>
+				<div class="linkslodging"><li><a href="https://www.couchsurfing.org/">Couch Surfing</a></li></div>
 			</ul>
 		</div>
 
