--- a/views/transportation.erb
+++ b/views/transportation.erb
@@ -26,11 +26,11 @@
     	</div>
 	</div><br><br><br>
 
-		<div class="head"><h1>Plan your trip from origin to destination</h1></div><br>
+	<div class="head"><h1>Plan Your Trip From Origin to Destination</h1></div><br>
 
 		<div class="transportation pure-g" id="flights">
 			<div class="pure-u-lg-2-3 pure-u-md-1-2 pure-u-sm-1-1">
-				<h3>Main Airlines</h3>
+				<h2>Main Airlines</h2>
 				<ul>
 	      			<div class="links" id="american"><li><a href="http://www.americanairlines.com">American Airlines</a></li></div>
 	      			<div class="links" id="delta"><li><a href="http://www.deltaairlines.com">Delta Airlines</a></li></div>
@@ -42,7 +42,7 @@
 	      			<div class="links" id="lufthansa"><li><a href="http://www.lufthansa.com">Lufthansa</a></li></div>
 	   			</ul>
 			</div><div class="pure-u-lg-1-3 pure-u-md-1-2 pure-u-1-1">
-	   			<h3>Budget Airlines</h3>
+	   			<h2>Budget Airlines</h2>
 	   			<ul>
 	      			<div class="links" id="swa"><li><a href="http://www.southwest.com">Southwest Airlines</a></li></div>
 	      			<div class="links" id="ryan"><li><a href="http://www.ryanair.com">Ryanair</a></li></div>
@@ -53,14 +53,14 @@
 
 		<div class="pure-g">
 			<div class="transportation pure-u-lg-1-3" id="train">
-				<h3>Trains & Railroads</h3>
+				<h2>Trains & Railroads</h2>
 				<ul>
 	      			<div class="links" id="amtrak"><li><a href="http://www.amtrak.com">Amtrak</a></li></div>
 	      			<div class="links" id="raileurope"><li><a href="#">RailEurope</a></li></div>
 	      			<div class="links" id="canadian"><li><a href="http://www.cn.ca/">Canadian</a></li></div>
 	   			</ul>
 			</div><div class="transportation pure-u-lg-1-3" id="cruise">
-				<h3>Cruises</h3>
+				<h2>Cruises</h2>
 				<ul>
 	      			<div class="links" id="carnival"><li><a href="http://www.carnival.com">Carnival</a></li></div>
 	      			<div class="links" id="disney"><li><a href="http://disneycruise.disney.go.com/">DisneyCruise</a></li></div>
@@ -69,7 +69,7 @@
 			</div>
 
 			<div class="transportation pure-u-lg-1-3" id="bus">
-					<h3>Buses</h3>
+					<h2>Buses</h2>
 				<ul>
 	      			<div class="links" id="coach"><li><a href="http://www.coachusa.com/">Coach USA</a></li></div>
 	      			<div class="links" id="greyhound"><li><a href="https://www.greyhound.com/">GreyHound</a></li></div>
