Changes to checklist page

--- a/views/bills.erb
+++ b/views/bills.erb
@@ -26,7 +26,7 @@
     	</div>
 	</div>
 
-	  <h1>We are here to help you split your bills</h1>
+	  <h1>We Are Here to Help You Split Your Bills</h1>
 
 
 <!-- 	  	<div class="pure-u-1-1">
