--- a/views/index.erb
+++ b/views/index.erb
@@ -28,7 +28,7 @@
 	</div>
 
 
-		<h1>We are here to help you plan your next vacation</h1>
+		<h1>We Are Here to Help You Plan Your Next Vacation</h1>
 
 		<!-- Form for the destination and other trip info -->
 		<div class="theform">
