--- a/views/print.erb
+++ b/views/print.erb
@@ -24,7 +24,7 @@
             	<li><a href="print">Print-out Page</a></li>
         	</ul>
     	</div>
-	</div>
+	</div><br><br><br>
 
 		<h1>My Itinerary and Checklist</h1>
 
