--- a/public/style_index.css
+++ b/public/style_index.css
@@ -67,6 +67,16 @@ label{
     text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
 }
 
+/*Checklist Styling*/
+.todo{
+	list-style-image: url(check.jpg);
+	font-size: 24px;
+	margin: 6px 0 6px 10px;
+	padding: 5px;
+	border:1px solid red;
+}
+
+
 /*Transportation and Lodging link styling*/
 .links{
 	display: inline-block;
