--- a/views/budget.erb
+++ b/views/budget.erb
@@ -26,7 +26,7 @@
     	</div>
 	</div>
 
-		<h1>We are here to help you plan your budget</h1>
+		<h1>We Are Here To Help You Plan Your Budget</h1>
 		
 		<div class="theform">
 		<div class="pure-g">
