--- a/views/checklist.erb
+++ b/views/checklist.erb
@@ -39,8 +39,8 @@
 				<% end %>
 
 			</ul>
-		<div>
-			<form action="/checklist" method="post">
+		<div class="theform">
+			<form action="/checklist" method="post" class="pure-form pure-form-aligned">
 					<label>To do item</label><input type="text" name="todo" autofocus>
 					<input type="submit" value="Submit" action="button" id="btn">
 			</form>
