Updated h1 tag font size

--- a/views/bills.erb
+++ b/views/bills.erb
@@ -28,7 +28,7 @@
     	</div>
 	</div>
 
-	  <h1>We Are Here to Help You Split Your Bills</h1>
+	  <h1 class="heading">We Are Here to Help You Split Your Bills</h1>
 
 
 <!-- 	  	<div class="pure-u-1-1">
