--- a/views/budget.erb
+++ b/views/budget.erb
@@ -27,7 +27,7 @@
     	</div>
 	</div>
 
-		<h1>We Are Here To Help You Plan Your Budget</h1>
+		<h1 class="heading">We Are Here To Help You Plan Your Budget</h1>
 		
 		<div class="theform">
 		<div class="pure-g">
