--- a/views/checklist.erb
+++ b/views/checklist.erb
@@ -13,7 +13,7 @@
 	<body>
 
 
-	<h1>Here Is a List of Things To Do</h1>
+	<h1 class="heading">Here Is a List of Things To Do</h1>
 
 	<div class="navbar">
     	<div class="home-menu pure-menu pure-menu-open pure-menu-horizontal pure-menu-fixed">
