--- a/views/index.erb
+++ b/views/index.erb
@@ -29,7 +29,7 @@
 	</div>
 
 
-		<h1>We Are Here to Help You Plan Your Next Vacation</h1>
+		<h1 class="heading">We Are Here to Help You Plan Your Next Vacation</h1>
 
 		<!-- Form for the destination and other trip info -->
 		<div class="theform">
