--- a/views/lodging.erb
+++ b/views/lodging.erb
@@ -27,7 +27,7 @@
     	</div>
 	</div><br><br>
 
-	<div class="head"><h1>We Are Here to Help You Find a Place to Stay</h1></div>
+	<h1 class="heading">We Are Here to Help You Find a Place to Stay</h1>
 	<div class="pure-g">
 		<div class="lodging pure-u-lg-1-3 pure-u-md-1-2" id="hotel">
 			<h2>Hotel Choices</h2>
