--- a/views/print.erb
+++ b/views/print.erb
@@ -28,7 +28,7 @@
 	</div><br><br><br>
 
 
-		<h1>My Itinerary and Checklist</h1>
+		<h1 class="heading">My Itinerary and Checklist</h1>
 
 		<p>My trip to: <span><%= session[:destination] %></span></p>
 		<p>I am getting there by: <span><%= session[:transportation_type] %></span></p>
