--- a/views/transportation.erb
+++ b/views/transportation.erb
@@ -27,7 +27,7 @@
     	</div>
 	</div><br><br><br>
 
-	<div class="head"><h1>Plan Your Trip From Origin to Destination</h1></div><br>
+	<h1 class="heading">Plan Your Trip From Origin to Destination</h1><br>
 
 		<div class="transportation pure-g" id="flights">
 			<div class="pure-u-lg-2-3 pure-u-md-1-2 pure-u-sm-1-1">
