--- a/public/style_index.css
+++ b/public/style_index.css
@@ -17,10 +17,11 @@ body{
 	margin-left: auto;
 	margin-right: auto;
 }
-h1{
+h1.heading {
 	padding-top: 70px;
 	color: #f2ca80;
 	text-align: center;
+	font-size: 50px;
 }
 
 .budget{
